@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Check head parts of multi-part objects when using the skills jumping, singing, or oratory.
+Andreas Kirschbaum 2010-08-26
+
 Fix possible crash using the singing skill.
 neodeno 2010-08-26
 
